# picar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bcm2835/: Makefile  config.status
bcm2835/doc/: Makefile
bcm2835/src/: .bcm2835.c.swp  Makefile  bcm2835.c  bcm2835.h  test
brain/: CMakeLists.txt
brain/include/: detect.hpp
brain/src/: brain.cpp  tf_test.cpp
car/: CMakeLists.txt
car/include/: brain.hpp  camera.hpp  control.hpp  frame.hpp  frame_keeper.hpp  senses.hpp
car/src/: brain.cpp  camera.cpp  car.cpp  control.cpp  frame.cpp
debian/: README  README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  picar-brain.default.ex  picar-brain.install  picar-car.init  picar-car.install  picar-car.postinst.debhelper  picar-car.postrm.debhelper  picar-car.prerm.debhelper  picar-car.service  picar-car.substvars  picar.cron.d.ex  picar.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local  watch.ex
debian/picar-brain/DEBIAN/: control  md5sums
debian/picar-brain/usr/share/doc/picar-brain/: README.md
debian/picar-car/DEBIAN/: control  md5sums  postinst  postrm  prerm
debian/picar-doc/DEBIAN/: control  md5sums
debian/picar-doc/usr/share/doc/picar-doc/: copyright
debian/picar/DEBIAN/: control  md5sums
debian/picar/usr/share/doc/picar/: README.md
include/: control.hpp  detect.hpp  main.hpp  senses.hpp
lib/: main.cpp
raspicam-0.1.6/: CMakeLists.txt
scripts/: init.startup  picar-car.pre  start.sh
scripts/python/: datagenerator.py  fine_tunning.ipynb  picar.py  testing.ipynb
share/models/: cameramount.stl
share/v2/: net.avg  net.model
share/v3/: net.avg  net.model
src/: brain.cpp  car.cpp  control.cpp  detect.cpp  lidar.cpp  main.cpp  senses.cpp  tf_test.cpp  video_sender.cpp
